# nionswift-ipython-provisioner

./: README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
nionswift_kernel_provisioner/: kernel_provisioner.py
nionswift_kernel_provisioner/resources/nion_swift_kernel/: kernel.json
nionswift_kernel_provisioner/test/: Kernel_test.py
