[metadata]
name = nionswift-ipython-provisioner
version = 0.0.1
author = Nion Software
author_email = swift@nion.com
description = An ipython kernel provisioner that connects to the Nion Swift ipython kernel.
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find_namespace:
python_requires = >=3.11
install_requires =
    ipykernel
    tornado
    jupyter_client>=7.0
    jupyter_core
    traitlets

[options.package_data]
nionswift_kernel_provisioner =
    resources/nion_swift_kernel/*.*

[options.packages.find]
include =
    nionswift_kernel_provisioner
    nionswift_kernel_provisioner.kernel_provisioner

[options.entry_points]
jupyter_client.kernel_provisioners =
    nion-swift-provisioner = nionswift_kernel_provisioner.kernel_provisioner:SwiftProvisioner
